--- a/BinarySearchTree/BinarySearchTree.vcxproj
+++ b/BinarySearchTree/BinarySearchTree.vcxproj
@@ -116,10 +116,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BST.h" />
+    <ClInclude Include="mapEncode.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BST.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="mapEncode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="morse.txt" />
