--- a/BinarySearchTree/BinarySearchTree.vcxproj.filters
+++ b/BinarySearchTree/BinarySearchTree.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="BST.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mapEncode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BST.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mapEncode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
